--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "argon2": "^0.41.1",
     "bcryptjs": "^2.4.3",
     "cookie": "^1.0.2",
+    "cookies-next": "^5.1.0",
     "crypto-js": "^4.2.0",
     "jose": "^5.9.6",
     "js-cookie": "^3.0.5",
