--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "cookie": "^1.0.2",
     "cookies-next": "^5.1.0",
     "crypto-js": "^4.2.0",
+    "firebase": "^11.2.0",
+    "firebase-admin": "^13.0.2",
     "jose": "^5.9.6",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.5",
+    "multer": "^1.4.5-lts.1",
     "next": "15.1.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
